<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to loginActivity -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">还没有账号？注册一个</string>
    <string name="forget"><u>忘记密码</u></string>
    <string name="remember">记住我</string>
    <string name="repeat">再次输入密码</string>
    <string name="input">请输入密码</string>
    <string name="reg">注册</string>
    <string name="regthing">试着用其他账号登录</string>
    <string name="main">首页</string>
    <string name="mine">我的</string>
    <string name="discovery">发现</string>
    <string name="schedule">日程</string>
    <string name="title_activity_home">homeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="b">Notifications</string>
    <string name="add">新建</string>
    <string name="reset">修改密码</string>
    <string name="myname">方瑞茺</string>
    <string name="myclass">17计算机1班</string>
    <string name="myxh">170104200105</string>
    <string name="email">fangrc0721@outlook.com"</string>

</resources>
