<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".registerActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@drawable/back"
        app:title="修改密码"
        app:titleMarginStart="20dp"
        app:titleTextColor="@android:color/background_light" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/input" />

    <Button
        android:id="@+id/reset"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="70dp"
        android:text="@string/reset"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="301dp" />


</LinearLayout>